UPCOMING PROJECT Section added

--- a/index.html
+++ b/index.html
@@ -89,7 +89,61 @@
     </div>
   </div>
 </div>
-<!--......................... Home Page Ends Here............................ -->
+<!--.... Home Page Ends Here..... -->
+
+
+
+
+<!--.......................... Services Section Starts Here.................................. -->
+<section>
+    <div class="section services" id="services">
+        <div class="box">
+         <div class="container">
+             <h1 class="page-heading">Services</h1>
+             <div class="services-container">
+                 <div class="service">
+                     <img class="service-sec-img" src="./images//Service a. UI design _Outline.svg" alt="Sample Image about IT Service">
+                     <h2>UX-Design</h2>
+                     <p>I design UX, I Design UI design UX, I Design UXI design UX, I Design UXI design UX, I Design UXI design UX, I Design UXX</p>
+                 </div>
+ 
+                 <div class="service">
+                     <img class="service-sec-img" src="./images/Service b. Web Development.svg" alt="Sample Image about IT Service">
+                     <h2>Web Development</h2>
+                     <p>I use the latest web design technologies to make your website successful.</p>
+                 </div>
+ 
+                 <div class="service">
+                     <img class="service-sec-img" src="./images/Service c. Responsive APP Development.svg" alt="Sample Image about IT Service">
+                     <h2>App Development</h2>
+                     <p>I use the latest design technologies and include on demand features to make your App modern.</p>
+                 </div>
+ 
+                 <div class="service">
+                     <img class="service-sec-img" src="./images/Service d. Bug Fixed_Flatline.svg" alt="Sample Image about IT Service">
+                     <h2>Bug Fixing</h2>
+                     <p>I design UX, I Design UX</p>
+                 </div>
+ 
+                 <div class="service">
+                     <img class="service-sec-img" src="./images/Service e. Modernisation.svg" alt="Sample Image about IT Service">
+                     <h2>Upgrade/ Update existing websites</h2>
+                     <p>I design UX, I Design UX</p>
+                 </div>
+ 
+ 
+                 <div class="service">
+                     <img class="service-sec-img" src="./images/Service f. Search Engine_Optimization.svg" alt="Sample Image about IT Service">
+                     <h2>Serach -Engine Optimisation</h2>
+                     <p>I design UX, I Design UX</p>
+                 </div>
+             </div>
+         </div>
+        </div>
+     </div>
+ 
+</section>
+<!-- Services Section Ends Here -->
 
 
 
@@ -97,6 +151,59 @@
 
 
 
+<!-- Upcoming Project Starts Here -->
+<section class='upcoming' id="upcoming">
+    <h1 class="page-heading upcoming-page-heading">Upcoming </h1>
+<div class="containerX">
+    <div class="boxA">
+        <div class="img-box">
+            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <h2>Close</h2>
+            <div class="content">
+                <h3>This Project I will be working is a NETFLIX Clone</h3>
+            </div>
+        </div>
+    </div>
+    <div class="boxA">
+        <div class="img-box">
+            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <h2>Close</h2>
+            <div class="content">
+                <h3>London</h3>
+            </div>
+        </div>
+    </div>
+    <div class="boxA">
+        <div class="img-box">
+            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <h2>Close</h2>
+            <div class="content">
+                <h3>Rome</h3>
+            </div>
+        </div>
+    </div>
+    <div class="boxA">
+        <div class="img-box">
+            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <h2>Close</h2>
+            <div class="content">
+                <h3>Moscow</h3>
+            </div>
+        </div>
+    </div>
+    <div class="boxA">
+        <div class="img-box">
+            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <h2>Close</h2>
+            <div class="content">
+                <h3>Tokyo</h3>
+            </div>
+        </div>
+    </div>
+</div>
+    
+</section>
+<!-- Upcoming Project Ends Here -->
 
 
 
