Media.css file updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="intro-grid container">
         <div class="intro">
             <h1>Salah Uddin</h1>
-            <h2>Frontend Developer- 8a</h2>
+            <h2>Frontend Developer- 9</h2>
             <h3>Recent graduate of Change Maker Educations (YH), Sweden</h3>
 
             <p>I am a front end developer based in Stockholm, Sweden. Welcome to my website, here you can find projects that I have developed.
@@ -128,7 +128,7 @@
                  <div class="service">
                      <img class="service-sec-img" src="./images/Service e. Modernisation.svg" alt="Sample Image about IT Service">
                      <h2>Upgrade/ Update existing websites</h2>
-                     <p>I design UX, I Design UX</p>
+                     <p>I design UX, I Design UX. I design UX, I Design UX. I design UX, I Design UX . I design UX, I Design UX</p>
                  </div>
  
  
