Intro images changed and css for service section updated

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="intro-image">
-            <img src="./images/salahuddin.jpg" alt="Image of Salah Uddin" width="400" height=auto>
+            <img src="./images/salahuddin-final.jpg" alt="Image of Salah Uddin" width="400" height=auto>
         </div>
     </div>
   </div>
