Image Gallery Reorganized

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="intro-grid container">
         <div class="intro">
             <h1>Salah Uddin</h1>
-            <h2>Frontend Developer- 9</h2>
+            <h2>Frontend Developer- 9a</h2>
             <h3>Recent graduate of Change Maker Educations (YH), Sweden</h3>
 
             <p>I am a front end developer based in Stockholm, Sweden. Welcome to my website, here you can find projects that I have developed.
@@ -101,38 +101,38 @@
              <h1 class="page-heading">Services</h1>
              <div class="services-container">
                  <div class="service">
-                     <img class="service-sec-img" src="./images//Service a. UI design _Outline.svg" alt="Sample Image about IT Service">
+                     <img class="service-sec-img" src="./images/services-images/Service a. UI design _Outline.svg" alt="Sample Image about IT Service">
                      <h2>UX-Design</h2>
                      <p>I design UX, I Design UI design UX, I Design UXI design UX, I Design UXI design UX, I Design UXI design UX, I Design UXX</p>
                  </div>
  
                  <div class="service">
-                     <img class="service-sec-img" src="./images/Service b. Web Development.svg" alt="Sample Image about IT Service">
+                     <img class="service-sec-img" src="./images/services-images/Service b. Web Development.svg" alt="Sample Image about IT Service">
                      <h2>Web Development</h2>
                      <p>I use the latest web design technologies to make your website successful.</p>
                  </div>
  
                  <div class="service">
-                     <img class="service-sec-img" src="./images/Service c. Responsive APP Development.svg" alt="Sample Image about IT Service">
+                     <img class="service-sec-img" src="./images/services-images/Service c. Responsive APP Development.svg" alt="Sample Image about IT Service">
                      <h2>App Development</h2>
                      <p>I use the latest design technologies and include on demand features to make your App modern.</p>
                  </div>
  
                  <div class="service">
-                     <img class="service-sec-img" src="./images/Service d. Bug Fixed_Flatline.svg" alt="Sample Image about IT Service">
+                     <img class="service-sec-img" src="./images/services-images/Service d. Bug Fixed_Flatline.svg" alt="Sample Image about IT Service">
                      <h2>Bug Fixing</h2>
                      <p>I design UX, I Design UX</p>
                  </div>
  
                  <div class="service">
-                     <img class="service-sec-img" src="./images/Service e. Modernisation.svg" alt="Sample Image about IT Service">
+                     <img class="service-sec-img" src="./images/services-images/Service e. Modernisation.svg" alt="Sample Image about IT Service">
                      <h2>Upgrade/ Update existing websites</h2>
                      <p>I design UX, I Design UX. I design UX, I Design UX. I design UX, I Design UX . I design UX, I Design UX</p>
                  </div>
  
  
                  <div class="service">
-                     <img class="service-sec-img" src="./images/Service f. Search Engine_Optimization.svg" alt="Sample Image about IT Service">
+                     <img class="service-sec-img" src="./images/services-images/Service f. Search Engine_Optimization.svg" alt="Sample Image about IT Service">
                      <h2>Serach -Engine Optimisation</h2>
                      <p>I design UX, I Design UX</p>
                  </div>
@@ -146,8 +146,8 @@
 
 
 <!-- PORTFOLIO Section Starts here -->
-
-I will delete this one
+<!-- 
+I will delete this one -->
 <!-- <section id="type_of_mango" class="section"> -->
   
     <h2 id="margin-bottom"class="page-heading"> PORTFOLIO </h2>
@@ -213,7 +213,7 @@ I will delete this one
 <div class="containerX">
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <img src="./images/upcoming-projects/Upcoming Project 1. Netflix clone using React.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
                 <h3>This Project I will be working is a NETFLIX Clone</h3>
@@ -222,7 +222,7 @@ I will delete this one
     </div>
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <img src="./images//upcoming-projects/Upcoming Project 2. A TD DO shopping cart App using REACT.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
                 <h3>London</h3>
@@ -231,7 +231,7 @@ I will delete this one
     </div>
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <img src="./images/upcoming-projects/Upcoming Project 3. Netflix clone using React.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
                 <h3>Rome</h3>
@@ -240,7 +240,7 @@ I will delete this one
     </div>
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <img src="./images/upcoming-projects/Upcoming Project 4. Restaurent website.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
                 <h3>Moscow</h3>
@@ -249,7 +249,7 @@ I will delete this one
     </div>
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/Upcoming Project. Netflix clone using React.JPG" alt="">
+            <img src="./images/upcoming-projects/Upcoming Project 5.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
                 <h3>Tokyo</h3>
