JS Function added on Portfolio

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ I will delete this one -->
     <h2 id="margin-bottom"class="page-heading" > PORTFOLIO </h2>
     <div class="containerF">
          
-          <div class="feature">
+          <div class="feature project1">
 
             <img id="header-img" src="./images/portfolio-images/Project 1. Accounting Company Website.jpg" alt="Example of my Project">
               
