--- a/index.html
+++ b/index.html
@@ -204,6 +204,20 @@ I will delete this one -->
                 <p>This is a Simple responsive website.</p>
           </div>
 
+          <div class="feature project6">
+            <img id="header-img" src="./images/portfolio-images/Project 6.JPG" alt="Example of my Project">
+               
+                <h2>Simple responsive website</h2>
+                <p>This is a Simple responsive website.</p>
+          </div>
+
+
+          <div class="feature project6">
+            <img id="header-img" src="./images/portfolio-images/Project 6.JPG" alt="Example of my Project">
+               
+                <h2>Simple responsive website</h2>
+                <p>This is a Simple responsive website.</p>
+          </div>
 
   
     </div>
@@ -232,19 +246,19 @@ I will delete this one -->
 
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/upcoming-projects/Upcoming Project 5.JPG" alt="">
+            <img src="./images/upcoming-projects/2.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
-                <h3>This Project I will be making using HTML, CSS and Javascript.</h3>
+                <h3>This will be an website for an NGO in Bangladesh who is working on Conservation of Tiger.</h3>
             </div>
         </div>
     </div>
     <div class="boxA">
         <div class="img-box">
-            <img src="./images/upcoming-projects/Upcoming Project 5.JPG" alt="">
+            <img src="./images/upcoming-projects/3.JPG" alt="">
             <h2>Close</h2>
             <div class="content">
-                <h3>This Project I will be making using HTML, CSS and Javascript.</h3>
+                <h3>This Project will be a Photography portfolio. I will be making using HTML, CSS and Javascript.</h3>
             </div>
         </div>
     </div>
