--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
 
                 <div class="intro-image">
-                    <img src="./images/salahuddin-final.jpg" alt="Image of Salah Uddin" width="400" height=auto>
+                    <img src="./images/salahuddin-final.jpg" alt="Image of Salah Uddin">
                 </div>
             
         </div>
