--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <img id="header-img" src="./images/portfolio-images/Project 5.JPG" alt="Example of my Project">
               
                 <h2>A website for Mangoes</h2>
-                <p>Lorem ipsum, dolor sit </p>
+                <p>Lorem ipsum, dolor sit. </p>
           </div>
 
           <div class="feature project6">
